# PSQP

./: .gitignore  CMakeLists.txt  EXAMPLE.md  LICENSE  PSLP_README.md  README.md  test_fix_col  test_inf_debug.c  test_inf_debug2.c  test_lp_api  test_lp_api.c  test_lp_simple  test_lp_simple.c
.github/workflows/: cmake.yml  coverage.yml  sanitizer.yml  valgrind.yml
cmake/: PSQPConfig.cmake.in
include/PSQP/: PSQP_API.h  PSQP_sol.h  PSQP_stats.h  PSQP_status.h
include/core/: CoreTransformations.h  Postsolver.h  Problem.h  debug_macros.h  psqp_thread.h
include/data_structures/: PSQP_warnings.h  Vec_macros.h
include/explorers/: DTonsEq.h  Parallel_cols.h  Parallel_rows.h  Primal_propagation.h  SimpleReductions.h  Simple_dual_fix.h  StonCols.h
src/core/: CoreTransformation.c  Debugger.c  Matrix.c  Postsolver.c  Presolver.c  Presolver_QR.c  Problem.c  Problem_QR.c  State.c  radix_sort.c
src/explorers/: DtonsEq.c  Parallel_cols.c  Parallel_rows.c  Primal_propagation.c  SimpleReductions.c  Simple_dual_fix.c  StonCols.c
tests/: all_tests.c  qp_example.c  qr_example.c  test_Constraints.h  test_CoreTransformations.h  test_Parallel_cols.h  test_Parallel_rows.h  test_Presolver.h  test_QP.h  test_QR.h  test_QR_comprehensive.h  test_QR_end2end.h  test_QR_kkt.h  test_QR_nkfix.h  test_QR_objective.h  test_SimpleReductions.h  test_bounded_check  test_bounded_check.c  test_comprehensive.c  test_dton.h  test_pathological.h  test_postsolve.h  test_qp_detailed.cpp  test_qr_advanced.c  test_qr_dton.c  test_qr_extreme  test_qr_standalone.c  test_qr_unbounded.c  test_qr_unbounded2  test_qr_unbounded2.c  test_ston.h  test_unbounded_dual  test_unbounded_dual.c  test_unbounded_qr  test_unbounded_qr.c
tests/test_psqp_all/: test_edge_cases.c  test_edge_full.c  test_main.c  test_presolve.c  test_problem.c  test_qp_debug.c  test_qp_full.c  test_qp_kkt.c  test_qp_partial.c  test_qp_postsolve.c  test_qp_specific.c  test_qp_step4.c  test_qp_step5.c  test_qp_step6.c  test_qp_step7.c  test_qp_step8.c  test_qr_core.c  test_suite.h
